src/ui/sass/modules/_LegacyCard.scss
/** @define LegacyCard */

.yxt-Result
{
  $result-background-color: white !default;

  $result-event-background-color: $color-background-highlight !default;

  $result-day-font-size: $font-size-xxlg !default;
  $result-day-line-height: $line-height-sm !default;
  $result-day-font-weight: $font-weight-semibold !default;
  $result-day-color: $color-text-primary !default;

  $result-month-font-size: $font-size-md !default;
  $result-month-line-height: $line-height-md !default;
  $result-month-font-weight: $font-weight-normal !default;
  $result-month-color: $color-text-primary !default;

  $result-ordinal-background-color: $color-brand-primary !default;
  $result-ordinal-font-size: $font-size-xs !default;
  $result-ordinal-line-height: $line-height-xs !default;
  $result-ordinal-font-weight: $font-weight-bold !default;
  $result-ordinal-color: white !default;

  $result-details-font-size: $font-size-md !default;
  $result-details-line-height: $line-height-md !default;
  $result-details-font-weight: $font-weight-normal !default;
  $result-details-color: $color-text-primary !default;

  $result-title-font-size: $font-size-lg !default;
  $result-title-line-height: $line-height-lg !default;
  $result-title-font-weight: $font-weight-semibold !default;
  $result-title-color: $color-text-primary !default;

  $result-subtitle-font-size: $font-size-md !default;
  $result-subtitle-line-height: $line-height-md !default;
  $result-subtitle-font-weight: $font-weight-normal !default;
  $result-subtitle-color: $color-text-secondary !default;

  $result-cta-font-size: $font-size-md !default;
  $result-cta-line-height: $line-height-md !default;
  $result-cta-font-weight: $font-weight-semibold !default;
  $result-cta-color: $color-link-primary !default;

  & + &
  {
    border-top: $border-default;
  }

  &-title
  {
    @include Text(
      $size: $result-title-font-size,
      $line-height: $result-title-line-height,
      $weight: $result-title-font-weight,
      $color: $result-title-color
    );

    margin-top: 0;
    margin-bottom: $base-spacing / 2;
  }

  &-titleLink
  {
    @include Link-1;

    display: inline-flex;
    align-items: center;

    @media (max-width: $breakpoint-mobile-max)
    {
      display: inline;
    }
  }

  &-ordinalWrapper
  {
    margin-right: $base-spacing-sm;
  }

  &-ordinal
  {
    @include Text(
      $size: $result-ordinal-font-size,
      $line-height: $result-ordinal-line-height,
      $weight: $result-ordinal-font-weight,
      $color: $result-ordinal-color
    );

    background-color: $result-ordinal-background-color;
    height: 18px;
    width: 18px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 3px;
  }

  &-wrapper
  {
    display: flex;
    flex-wrap: nowrap;
    padding-top: $base-spacing;
    padding-bottom: $base-spacing;
    padding-left: $base-spacing;
    padding-right: $base-spacing;
    background-color: $result-background-color;

    @media (max-width: $breakpoint-mobile-max)
    {
      flex-wrap: wrap;
    }
  }

  &-imageWrapper
  {
    display: flex;
    align-items: flex-start;
    width: 100px;
    min-width: 100px;
    margin-right: 1rem;
  }

  &-image
  {
    // Firefox is the only browser that handles img elements in flex containers
    // properly
    width: 100%;
  }

  &-infoCtasWrapper
  {
    display: flex;
    flex-grow: 1;

    @media (max-width: $breakpoint-mobile-max)
    {
      flex-direction: column;
    }
  }

  &-details
  {
    @include Text(
      $size: $result-details-font-size,
      $line-height: $result-details-line-height,
      $weight: $result-details-font-weight,
      $color: $result-details-color
    );
  }

  &-ctasWrapper
  {
    display: flex;
    align-items: top;
    flex-grow: 1;
    flex-shrink: 0;

    @media (min-width: $breakpoint-mobile-min)
    {
      justify-content: flex-end;
      margin-left: $base-spacing-sm * 2;
    }

    @media (max-width: $breakpoint-mobile-max)
    {
      margin-top: $base-spacing / 2;
    }
  }

  &-ctas
  {
    display: flex;

    @media (max-width: $breakpoint-mobile-max)
    {
      flex-direction: column;
    }
  }

  &-cta
  {
    @include Link-1;

    display: flex;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
    padding-top: $base-spacing / 2;
    padding-left: $base-spacing / 2;
    padding-right: $base-spacing / 2;
    padding-bottom: $base-spacing / 2;
    border-radius: 4px;
    min-width: 60px;
    text-align: center;

    @media (max-width: $breakpoint-mobile-max)
    {
      flex-direction: row;
      padding-left: 0;
    }

    & + &
    {
      margin-left: $base-spacing / 2;
    }
  }

  &-ctaIconWrapper
  {
    display: flex;
    padding-left: $base-spacing * 2;
    padding-right: $base-spacing * 2;
    margin-bottom: $base-spacing / 2;

    @media(max-width: $breakpoint-mobile-max)
    {
      padding-left: 0;
      padding-right: 0;
      margin-right: 8px;
      margin-bottom: 0;
    }
  }

  &-ctaIcon
  {
    width: 24px;
    height: 24px;
  }

  &-ctaLabel
  {
    @include Text(
      $size: $result-cta-font-size,
      $line-height: $result-cta-line-height,
      $weight: $result-cta-font-weight,
      $color: $result-cta-color
    );

    letter-spacing: 0.5px;
    text-transform: uppercase;
  }

  &-dateWrapper
  {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-left: $base-spacing * 2;
    margin-right: $base-spacing * 3;
    padding-left: $base-spacing;
    padding-right: $base-spacing;

    @media (max-width: $breakpoint-mobile-max)
    {
      display: none;
    }
  }

  &-dateInnerWrapper
  {
    display: flex;
    flex-direction: column;
    border-radius: 8px;
    padding: $base-spacing / 4;
    text-align: center;
    background-color: $result-event-background-color;
  }

  &-day
  {
    @include Text(
      $size: $result-day-font-size,
      $line-height: $result-day-line-height,
      $weight: $result-day-font-weight,
      $color: $result-day-color
    );
  }

  &-month
  {
    @include Text(
      $size: $result-month-font-size,
      $line-height: $result-month-line-height,
      $weight: $result-month-font-weight,
      $color: $result-month-color
    );
  }

  &-subtitle
  {
    @include Text(
      $size: $result-subtitle-font-size,
      $line-height: $result-subtitle-line-height,
      $weight: $result-subtitle-font-weight,
      $color: $result-subtitle-color
    );

    margin-bottom: $base-spacing/2;
  }

  &-features
  {
    list-style: disc;
    padding-left: 18px;
  }
}

